# cmake_tutorial

00_hello/: CMakeLists.txt
01_libraries/: CMakeLists.txt  Message.cpp
02_conditionals/: CMakeLists.txt  Message.hpp  hello_world.cpp
03_loops/: CMakeLists.txt
04_options/: CMakeLists.txt
05_hello_ctest/: CMakeLists.txt
06_bash_ctest/: CMakeLists.txt
07_python_ctest/: CMakeLists.txt
08_ctest_labels/: CMakeLists.txt
09_ctest_will_fail/: CMakeLists.txt
10_ctest-cost/: CMakeLists.txt
11_ctest_timeout/: CMakeLists.txt
12_os/: CMakeLists.txt
13_processor/: CMakeLists.txt
14_host_system_information/: CMakeLists.txt
15_sys_preproc/: CMakeLists.txt
16_configure/: CMakeLists.txt  config.h.in  processor_info.cpp
17_find_cffi/: CMakeLists.txt
18_pre_post/: CMakeLists.txt
19_check_compiler_flag/: CMakeLists.txt
21_automata/: CMakeLists.txt
21_automata/src/: CMakeLists.txt
21_automata/src/evolution/: CMakeLists.txt
21_automata/src/initial/: CMakeLists.txt
21_automata/src/io/: CMakeLists.txt
21_automata/src/parser/: CMakeLists.txt
day_1/00_hello-cxx/: CMakeLists.txt
